# dev-design

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: analyzer.ts  cssTransforms.ts  jsxTransforms.ts  tauri.ts  types.ts
src/styles/: app.css
